--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://event_app_user:yhEJIzwiDlnAXQRn41H1ksfhaWLQmkPQ@dpg-clngchoapebc739ob330-a.oregon-postgres.render.com/event_app
+DATABASE_URL=postgres://event_app_18tz_user:9Y1JfAdf7IunnAulbjix9V19e8oUX7Z9@dpg-clnnk31jvg7s73a0o3sg-a.oregon-postgres.render.com/event_app_18tz
